--- a/TestApplication/src/TestApplication.App/Views/HomeView.xaml
+++ b/TestApplication/src/TestApplication.App/Views/HomeView.xaml
@@ -41,7 +41,8 @@
                 <TextBlock Text="Password" HorizontalAlignment="Center" Margin="10"/>
                 <TextBox Width="175"/>
             </StackPanel>
-            <Button Grid.Row="0" Grid.Column="1" Content="Login" Height="25" Width="125" Margin="5"/>
+            <Button Grid.Row="0" Grid.Column="1" Content="Connect" Height="25" Width="125" Margin="5"
+                    Command="{Binding ConnectionToDBCommand}"/>
 
             <StackPanel Grid.Row="0" Grid.Column="3" VerticalAlignment="Center" Visibility="Hidden">
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" TextWrapping="Wrap"
@@ -55,7 +56,8 @@
             </StackPanel>
         </Grid>
 
-        <DataGrid Grid.Row="2" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="3">
+        <DataGrid Grid.Row="2" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="3"
+                  ItemsSource="{Binding RetrievedData}">
             
         </DataGrid>
     </Grid>
