--- a/TestApplication/src/TestApplication.App/Views/HomeView.xaml
+++ b/TestApplication/src/TestApplication.App/Views/HomeView.xaml
@@ -41,8 +41,8 @@
             <Button Grid.Row="0" Grid.Column="1" Content="Test connection" Height="25" Width="125" Margin="5"
                     Command="{Binding TestConnectionCommand}"/>
 
-            <StackPanel Grid.Row="0" Grid.Column="2" Margin="5"
-                        Visibility="{Binding IsConnected, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}">
+            <StackPanel Grid.Row="1" Grid.Column="2" Margin="5"
+                        Visibility="{Binding IsConnected, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}">
                 <TextBlock Text="Getting data" HorizontalAlignment="Center" Margin="10"/>
                 <Button Content="Load data" Width="125" Command="{Binding LoadDataCommand}"/>
             </StackPanel>
